--- a/arability/app/views/admin/_add-trophy.html.erb
+++ b/arability/app/views/admin/_add-trophy.html.erb
@@ -1,26 +1,40 @@
-<form class="form-horizontal well span6" action="#" method="post">
+<form class="form-horizontal well span6" action="/admin/addtrophy" method="post">
 	<fieldset>
 		<legend>إضافة مدالية جديدة</legend>
 		<div class="control-group">
 			<label class="control-label" for="inputPassword">إسم المدالية</label>
 			<div class="controls">
-				<input type="password" id="inputPassword" placeholder="إسم المدالية">
+				<input type="password" id="inputPassword" placeholder="إسم المدالية" name="name">
 			</div>
 		</div>
 		<div class="control-group">
 			<label class="control-label" for="inputPassword">مجموع النقاط</label>
 			<div class="controls">
-				<input type="password" id="inputPassword" placeholder="مجموع النقاط">
+				<input type="password" id="inputPassword" placeholder="مجموع النقاط" name="score">
 			</div>
 		</div>
 		<div class="control-group">
 			<label class="control-label" for="inputPassword">الترتيب</label>
 			<div class="controls">
-				<input type="password" id="inputPassword" placeholder="الترتيب">
+				<input type="password" id="inputPassword" placeholder="الترتيب" name="rank">
 			</div>
 		</div>
-		<div class="control-group">
-			
+		<div class="control-group" data-provides="fileupload">
+			<label class="control-label">الصورة</label>
+			<div class="controls">
+				<div class="uploader-controls">
+					<div class="uploader-preview fileupload-preview thumbnail">
+						<img src="http://www.placehold.it/200x150/EFEFEF/AAAAAA&text=no+image">
+					</div>
+					<div class="uploader-side">
+						<button class="btn uploader-button" type="button">إختيار الصورة</button>
+						<div class="uploader-file-input">
+							<input type="file" accept="image/*" name="photo">
+						</div>
+						<p class="uploader-help" dir="ltr">Maximum size of 1MB. PNG, JPEG, GIF.</p>
+					</div>
+				</div>
+			</div>
 		</div>
 		<div class="control-group">
 			<button type="submit" class="btn">إضافة المدالية</button>
