[Isse #209][NW] Edited share button

--- a/arability/app/views/projects/show.html.erb
+++ b/arability/app/views/projects/show.html.erb
@@ -22,7 +22,11 @@
 					<button class="btn"><i class="icon-thumbs-up"></i>  Recommended words  <span></span></button>
 				</div>
 				<div class="btn-group">
-					<button class="btn"><i class="icon-share"></i> Share project <span class="caret"></span></button>
+					<button class="btn"><i class="icon-share"></i> Share <span class="caret"></span></button>
+					<ul class="dropdown-menu">
+						<li><a href= "#">Share project</a></li>
+						<li><a href= "#">People shared with</a></li>
+					</ul>
 				</div>
 				<div class="btn-group">
 					<button class="btn"><i class="icon-edit"></i> Edit project <span></span></button>
