--- a/arability/app/views/admin/index.html.erb
+++ b/arability/app/views/admin/index.html.erb
@@ -52,9 +52,7 @@
 						<%= render 'add-trophy' %>
 					</div>
 					<div class="tab-pane" id="delete-trophy">
-						<form class="well span6" action="#" method="post">
-							
-						</form>
+						<%= render 'list-trophies' %>
 					</div>
 					<div class="tab-pane" id="add-prize">
 						<form class="well span6" action="#" method="post">
