[WIP] more progress towards logic

--- a/arability/app/views/games/game.html.erb
+++ b/arability/app/views/games/game.html.erb
@@ -20,7 +20,7 @@
       
     </div>
   </div>
-  <div class="zone">
+  <div class="zone" id="zone" style="text-align:right; direction: rtl;">
     
   </div>
 </div>
