[isuue #169] [WIP] adds the front end of selecting synonym in vote form

--- a/arability/app/views/games/game.html.erb
+++ b/arability/app/views/games/game.html.erb
@@ -1,3 +1,20 @@
+<script type="text/javascript" charset="utf-8">
+  
+  var words=["car","dead","ok"];
+
+  function get_words(){
+    return words;
+  }
+
+  function request_vote_form(){
+    $('#workspace').remove();
+    $('.zone').append('<div class=\"vote_form\"></div>');
+    var first_word = words.shift();
+    $.post("/games/vote.js", { word: first_word});
+  }
+
+
+</script>
 
 <div class="game-zone">
   <div class="game-nav">
@@ -21,6 +38,12 @@
     </div>
   </div>
   <div class="zone">
-    
+
   </div>
 </div>
+
+<div id="workspace" style="position:relative; left: 10px; ">
+  <a onclick="request_vote_form()"  id="btn">start voting</a>
+</div>
+
+
