--- a/arability/app/views/games/getprizes.js.erb
+++ b/arability/app/views/games/getprizes.js.erb
@@ -7,9 +7,9 @@
   <% won_prizes = Prize.get_new_prizes_for_gamer(current_gamer.id, params[:level], params[:score]) %>
 
   <% if won_prizes.length == 0 %>
-     success = '<h1 style="padding: 20px;">مبروك! لقد فزت الجوائز التالية!</h1>';
+     success = '<h1 style="padding: 20px;text-align:right;">مبروك! لقد فزت الجوائز التالية!</h1>';
   <% else %>
-     success = '<h1 style="padding: 20px;">مبروك! لقد فزت الجوائز التالية!</h1>';
+     success = '<h1 style="padding: 20px;text-align:right;">مبروك! لقد فزت الجوائز التالية!</h1>';
   <% end %>
 
     $("#zone").append($(success));
