--- a/arability/app/views/games/gettrophies.js.erb
+++ b/arability/app/views/games/gettrophies.js.erb
@@ -1,7 +1,7 @@
 <% if params[:level] == nil || params[:score] == nil%>
     error = '<div class="alert" style="text-align:right; margin:10px;">' +
             '<button type="button" class="close" data-dismiss="alert">&times;</button>' +
-            '<strong>تحذير!</strong>لقد حققت الانجازات التالية ' + '</div>';
+            '<strong>تحذير!</strong> حاولت طلب بيانات غير صالحة.' + '</div>';
     $("#zone").append($(error));
 <% else %>
   <% won_trophies = Trophy.get_new_trophies_for_gamer(current_gamer.id, params[:level], params[:score]) %>
