[issue #169] [WIP] adds css to the select synonym form

--- a/arability/app/assets/stylesheets/games.css.scss
+++ b/arability/app/assets/stylesheets/games.css.scss
@@ -36,3 +36,21 @@
   padding-top: 20px;
   
 }
+
+.vote_form {
+  float: right;
+  margin-right: 20px;
+  height:50px;
+  font-size: 30px;
+  padding-top: 20px;
+  height:50px;
+
+}
+
+#synonym_button{
+  height:50px;
+  width:150px;
+  font-size:30px;
+  padding:20px;
+
+}
