--- a/arability/app/views/games/getprizes.js.erb
+++ b/arability/app/views/games/getprizes.js.erb
@@ -7,10 +7,19 @@
   <% won_prizes = Prize.get_new_prizes_for_gamer(current_gamer.id, params[:level], params[:score]) %>
 
   <% if won_prizes.length == 0 %>
-     success = '<h1 style="padding: 20px;text-align:right;">مبروك! لقد فزت الجوائز التالية!</h1>';
+      success = '<h1 class="award-title">لقد ربحت كل الجوائز لهذه المرحلة /h1>';
   <% else %>
-     success = '<h1 style="padding: 20px;text-align:right;">مبروك! لقد فزت الجوائز التالية!</h1>';
-  <% end %>
+      success = '<h1 class="award-title">مبروك! لقد فزت الجوائز التالية!</h1>';
+      prizes = [];
 
-    $("#zone").append($(success));
+      <% won_prizes.each do |p| %>
+        prizes.push('<div class="award">' + '<%= p.name %>' + '</div>');
+      <% end %>
+
+  <% end %>
+      $("#zone").append($(success));
+      for(var i = 0; i < prizes.length; i++) {
+        $("#zone").append($(prizes[i]));
+      }
+
 <% end %>
