--- a/arability/app/assets/stylesheets/games.css.scss
+++ b/arability/app/assets/stylesheets/games.css.scss
@@ -41,8 +41,8 @@
   float: right;
   margin-right: 20px;
   height:50px;
-  font-size: 30px;
-  padding-top: 20px;
+  font-size: 50px;
+  padding-top: 40px;
   height:50px;
 
 }
@@ -52,5 +52,21 @@
   width:150px;
   font-size:30px;
   padding:20px;
+  padding-bottom:40px;
+  margin:20px;
+  text-align: center;
+  border-top-left-radius:4px;
+  border-bottom-left-radius:4px;
+  border-top-right-radius:4px;
+  border-bottom-right-radius:4px;
+  margin-right:150px;
+}
 
+#synonym_buttons_row{
+
+}
+
+#synonym_buttons{
+  right:50%;
+  left:50;
 }
