issue [#182] [WIP] add a new prize implemented

--- a/arability/app/views/admin/index.html.erb
+++ b/arability/app/views/admin/index.html.erb
@@ -55,9 +55,7 @@
 						<%= render 'list-trophies' %>
 					</div>
 					<div class="tab-pane" id="add-prize">
-						<form class="well span6" action="#" method="post">
-							
-						</form>
+						<%= render 'add-prize' %>
 					</div>
 					<div class="tab-pane" id="delete-prize">
 						<form class="well span6" action="#" method="post">
