issue [#194] [WIP] list and delete prizes implemented

--- a/arability/app/views/admin/_navbar.html.erb
+++ b/arability/app/views/admin/_navbar.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar navbar-fixed-top navbar-inverse">
 	<div class="navbar-inner">
 		<div class="container">
-			<a class="brand" href="#">لوحة تحكم Arability</a>
+			<a class="brand" href="/admin/index">لوحة تحكم Arability</a>
 			<% if is_logged_in? %>
 			<ul class="nav pull-right">
 				<li>
