[issue #176] [WIP] adds frontend and stylesheet of skip synonym in vote_form

--- a/arability/app/views/games/vote.js.erb
+++ b/arability/app/views/games/vote.js.erb
@@ -34,6 +34,9 @@ vote_form.push('<% i=i+1 %>');
 vote_form.push('<% end %>');
 vote_form.push('</div>');
 vote_form.push('</div>');
+vote_form.push('<div style="float:left;">');
+vote_form.push('<button class="btn btn-primary" type="submit"> <<  تخطي هذه الكلمة</button>');
+vote_form.push('</div>');
 
 vote_form=vote_form.join('');
 
