--- a/arability/app/views/admin/_add-trophy.html.erb
+++ b/arability/app/views/admin/_add-trophy.html.erb
@@ -1,6 +1,7 @@
 <form class="form-horizontal well span6" action="/admin/addtrophy" method="post" enctype="multipart/form-data">
 	<fieldset>
 		<legend>إضافة مدالية جديدة</legend>
+		<input type="hidden" value="<%= form_authenticity_token %>" name="authenticity_token">
 		<div class="control-group">
 			<label class="control-label" for="inputName">إسم المدالية</label>
 			<div class="controls">
