--- a/arability/app/views/admin/_add-word.html.erb
+++ b/arability/app/views/admin/_add-word.html.erb
@@ -1,6 +1,7 @@
 <form class="form-horizontal well span5" action="addword" method="post">
 	<fieldset>
 		<legend>إضافة كلمة جديدة</legend>
+		<input type="hidden" value="<%= form_authenticity_token %>" name="authenticity_token">
 		<div class="control-group">
 			<label class="control-label" for="inputkeyword">الكلمة</label>
 			<div class="controls">
