--- a/arability/app/views/games/game.html.erb
+++ b/arability/app/views/games/game.html.erb
@@ -11,16 +11,16 @@
       الإنجازات
     </div>
     <div class="nav-box">
-     بروفيل 
+     بروفيل
     </div>
     <div class="nav-box">
-     إعدادات 
+     إعدادات
     </div>
     <div id="level" class="nav-box">
       
     </div>
   </div>
-  <div class="zone">
+  <div class="zone" id="zone" style="text-align:right; direction: rtl;">
     
   </div>
 </div>
