--- a/arability/app/views/projects/index.html.erb
+++ b/arability/app/views/projects/index.html.erb
@@ -1,22 +1,25 @@
 <h1>Projects</h1>
 <br />
-<a class="btn" href="/projects/new"><i class="icon-plus"></i> New Project</a>
+<div class="tabbable tabs-left">
+  <ul class="nav nav-tabs">
+    <li class="active"><a href="#tab1" data-toggle="tab">My projects</a></li>
+    <li><a href="#tab2" data-toggle="tab">Shared projects with me</a></li>
+  </ul>
+  <div class="tab-content">
+    <div class="tab-pane active" id="tab1">
+      <p><a class="btn" href="/projects/new"><i class="icon-plus"></i> New Project</a>
 <br />
 <% @projects.each do |project| %>
   <div class="boxed">
-  Name:
-  <br />
-  <%= project.name %>
-  <br />
-  Categories:
-  <br />
-  <% project.categories.each do |c| %>
-    <%= c.name %>
+    <a class="btn" href="/projects/<%= project.id %>/edit"><i class="icon-edit"></i></a>
+    <br />
+    Name:  <%= link_to project.name, :controller => "projects", :action => "show", :id =>project %>
+    <br />
+    Categories:  <% project.categories.each do |c| %>
+      <%= c.name %>
+      <% end %>
+    <br />
+    <%= project.description %>
+    <br />
   <% end %>
-  <br />
-  Description:
-  <br />	
-  <%= project.description %>
 </div>
-<br />
-<% end %>
