[issue #170] [WIP] adds some modifications to suggest synonym styles

--- a/arability/app/assets/stylesheets/games.css.scss
+++ b/arability/app/assets/stylesheets/games.css.scss
@@ -74,11 +74,13 @@
 #skip_button{
   float:left;
   margin-left:-100;
+  font-size:25px;
 }
 
 #suggest_synonym_textbox{
   text-align:right;
   margin-left:20px;
+  font-size:21px;
 }
 
 
