--- a/arability/app/views/admin/_admin-login-form.html.erb
+++ b/arability/app/views/admin/_admin-login-form.html.erb
@@ -12,7 +12,7 @@
 			<div class="control-group">
 				<label class="control-label" for="inputpassword">كلمة السر</label>
 				<div class="controls">
-					<input type="text" id="inputpassword" name="password" placeholder="كلمة السر">
+					<input type="password" id="inputpassword" name="password" placeholder="كلمة السر">
 				</div>
 			</div>
 			<div class="control-group">
