--- a/arability/app/views/games/game.html.erb
+++ b/arability/app/views/games/game.html.erb
@@ -21,6 +21,11 @@
     </div>
   </div>
   <div class="zone" id="zone" style="text-align:right; direction: rtl;">
-    
+    <div class="award-zone">
+      <h1 class="award-type">الجوائز التي تم الحصول عليها </h1>
+      <div class="award-desc-unlocked">
+        كفاية باءة ونابي  
+      </div>
+    </div>
   </div>
 </div>
