--- a/arability/app/views/search/search.html.erb
+++ b/arability/app/views/search/search.html.erb
@@ -1,10 +1,10 @@
 <div class="row">
 	<div class="span12">
-		<legend>Search Keywords:</legend>
+		<legend><%= t(:search)%></legend>
 		<%= form_tag(search_path, :method => "post", :class => "form-search") do %>
 			<%= content_tag(:div, :class => 'input-append') do %>
 				<% text_field_tag(:search, @search_keyword,
-													:placeholder => 'search keywords here...',
+													:placeholder => t(:search_here),
 													:class => 'search-query') + %>
 				<% button_tag(:type => "submit",:class => 'btn') do %>
 					<% content_tag(:i, nil,:class => "icon-search") %>
@@ -18,7 +18,7 @@
 	<div class="accordion-group">
 		<div class="accordion-heading">
 			<span class="accordion-toggle" data-toggle="false" href="#collective">
-				<span>Viewing collective statistics for word <i><b><%= @search_keyword %></b></i></span>
+				<span>t(:view_collectives)<i><b><%= @search_keyword %></b></i></span>
 			</span>
 		</div>
 		<div id="collective" class="accordion-body collapse in">
@@ -40,10 +40,10 @@
 								</div>
 								<div class="pull-right">
 									<button class="btn btn-mini" style="display:inline;" data-toggle="collapse" href="#collapse<%= synonym.id %>">
-										<span>View Stats</span>
+										<span>t(:visual_stats)</span>
 									</button>
 									<%= button_tag(:type => "submit", :class => 'btn btn-mini',:style => "display:inline;") do %>
-										<%= content_tag(:span, "Add to Project")%>
+										<%= content_tag(:span, t(:add_to_project))%>
 									<% end %>
 								</div>
 							</div>
