--- a/arability/app/views/search/search.html.erb
+++ b/arability/app/views/search/search.html.erb
@@ -17,7 +17,7 @@
 	<div class="accordion-group">
 		<div class="accordion-heading">
 			<span class="accordion-toggle" data-toggle="false" href="#collective">
-				<span>t(:view_collectives)<i><b><%= @search_keyword %></b></i></span>
+				<span><%= t(:view_collectives) %><i><b><%= @search_keyword %></b></i></span>
 			</span>
 		</div>
 		<div id="collective" class="accordion-body collapse in">
@@ -39,7 +39,7 @@
 								</div>
 								<div class="pull-right">
 									<button class="btn btn-mini" style="display:inline;" data-toggle="collapse" href="#collapse<%= synonym.id %>">
-										<span>t(:visual_stats)</span>
+										<span><%= t(:view_stats) %></span>
 									</button>
 									<%= button_tag(:type => "submit", :class => 'btn btn-mini',:style => "display:inline;") do %>
 										<%= content_tag(:span, t(:add_to_project))%>
