--- a/arability/app/views/layouts/application.html.erb
+++ b/arability/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
 <head>
   <title>Arability</title>
   <%= stylesheet_link_tag "application", :media => "all" %>
+  <%= stylesheet_link_tag "games", :media => "all" %>
   <% if I18n.locale == :ar %>
     <%= stylesheet_link_tag "bootstrap.rtl", :media => "all" %>
     <%= stylesheet_link_tag "bootstrap-responsive.rtl", :media => "all" %>
