--- a/arability/app/views/projects/index.html.erb
+++ b/arability/app/views/projects/index.html.erb
@@ -8,6 +8,10 @@
   <br />
   <%= project.name %>
   <br />
+  <% project.developers_shared.each do |dev|%>
+  <%= dev.name %>
+   <a href="/projects/remove_developer_from_project?dev_id=<%=dev.id%>&project_id=<%=project.id%>">Remove Share</a>
+  <%end%>
   Categories:
   <br />
   <% project.categories.each do |c| %>
