--- a/arability/app/assets/stylesheets/games.css.scss
+++ b/arability/app/assets/stylesheets/games.css.scss
@@ -70,6 +70,19 @@
   background-color: rgba(0,204,190, 0.3);
 }
 
+.award-desc-locked {
+   font-size: 20px;
+  padding: 10px;
+  margin-left:10px;
+  margin-right:10px;
+  margin-top: 10px;
+  direction: rtl;
+  text-align:right;
+  background-color: rgba(200,204,190, 0.3);
+}
+
+
+
 .award-type {
   padding-right: 20px;
   padding-left: 20px;
