--- a/arability/app/views/games/gettrophies.js.erb
+++ b/arability/app/views/games/gettrophies.js.erb
@@ -7,10 +7,10 @@
   <% won_trophies = Trophy.get_new_trophies_for_gamer(current_gamer.id, params[:level], params[:score]) %>
 
   <% if won_trophies.length == 0 %>
-      success = '<h1 class="award-title">لقد ربحت كل الجوائز لهذه المرحلة </h1>';
+      success = '<h1 class="award-title">لا يمكنك إنجاز أي انجازات أخرى لهذه المرحلة</h1>';
   <% else %>
       <% won_trophies.map { |nt| current_gamer.trophies << nt } %>
-      success = '<h1 class="award-title">مبروك! لقد فزت الجوائز التالية!</h1>';
+      success = '<h1 class="award-title">لقد انجزت الانجازات التالية!</h1>';
       trophies = [];
 
       <% won_trophies.each do |t| %>
