--- a/arability/app/views/projects/show.html.erb
+++ b/arability/app/views/projects/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container" border="1"> 
-	<h3>Project: <%=@project.name %></h3><br>
+	<h3><%= t(:project)%>: <%=@project.name %></h3><br>
 	<form>
 		<div class="container well">
 			<div class="btn-toolbar" style="margin: 0;">
