--- a/arability/app/views/projects/_form.html.erb
+++ b/arability/app/views/projects/_form.html.erb
@@ -3,7 +3,7 @@
     display:float;
 }
 </style>
-<div class = "container">
+<div class = "container" >
     <%= form_for(@project) do |f| %>
     <% if @project.errors.any? %>
     <div id="error_explanation">
@@ -17,32 +17,30 @@
     <% end %>
 
     <div class="field">
-        <%= f.label :name %>
+        <%= t(:name)%>
         <%= f.text_field :name %>
     </div>
     <div class="field">
-        <%= f.label :categories %>
+        <%= t(:categories)%>
         <%= text_field_tag("project[categories]",@project.categories) %> 
     </div><br>
     <div class="radio">
+        <%= t(:formal)%>
         <%= f.radio_button :formal, 'Formal'%> 
-        <%= label :formal, 'Formal' %>
+        <%= t(:slang)%>
         <%= f.radio_button :formal, 'Slang' %>
-        <%= label :slang, 'Slang' %>
-        <br>
+        </br>
+    </br>
     </div>
     <div class="field">
-        <div class="field">Age Target</div></br>
-<!--         <%= f.text_field :minAge %>
-        <%= f.label "To" %>
-        <%= f.text_field :maxAge %> -->
-        <form class="form-inline">
-          <input type="text" class="input-small" placeholder="From" value="<%= @minAge %>">
-          <input type="text" class="input-small" placeholder="To" value="<%= @maxAge %>">
-      </form>
+        <div class="field"><%= t(:age)%></div>
+        <%= t(:from)%>
+        <%= f.text_field :minAge %>
+        <%= t(:to)%>
+        <%= f.text_field :maxAge %>
   </div>
   <div>
-    <%= f.label :description %>
+    <%= t(:desc) %>
     <%= f.text_area :description %>
 </div>
 <div class="actions">
