[WIP] fixed typos in showtrophies for locked and unlocked

--- a/arability/app/views/games/showtrophies.js.erb
+++ b/arability/app/views/games/showtrophies.js.erb
@@ -1,6 +1,6 @@
 var award_zone = '<div class="award-zone" id="award-list"></div>';
-var won_trophies = '<h1 class="award-type">الجوائز التي تم الحصول عليها</h1>';
-var not_won_trophies = '<h1 class="award-type">الجوائز التي بإمكانك الحصول عليه </h1>';
+var won_trophies = '<h1 class="award-type">الانجازات التي تم الحصول عليها</h1>';
+var not_won_trophies = '<h1 class="award-type">الانجازات التي يمكنك الحصول عليها </h1>';
 $("#zone").append($(award_zone));
 
 $("#award-list").append($(won_trophies));
