--- a/arability/app/views/layouts/application.html.erb
+++ b/arability/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
     <%= javascript_include_tag "bootstrap.rtl" %>
   <% else %>
     <%= stylesheet_link_tag "bootstrap_and_overrides", :media => "all" %>
+    <%= javascript_include_tag "bootstrap" %>
   <% end %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
