[issue #170] [WIP] adds backend for suggesting synonyms

--- a/arability/app/views/games/game.html.erb
+++ b/arability/app/views/games/game.html.erb
@@ -1,6 +1,6 @@
 <script type="text/javascript" charset="utf-8">
   
-  var words=["car","dead","ok"];
+  var words=["car","sar","sad","sfd"];
 
   function get_words(){
     return words;
