--- a/arability/app/views/projects/index.html.erb
+++ b/arability/app/views/projects/index.html.erb
@@ -2,8 +2,8 @@
 <br />
 <div class="tabbable tabs-left">
   <ul class="nav nav-tabs">
-    <li class="active"><a href="#tab1" data-toggle="tab">My projects</a></li>
-    <li><a href="#tab2" data-toggle="tab">Shared projects with me</a></li>
+    <li class="active"><a href="#tab1" data-toggle="tab">مشاريعي</a></li>
+    <li><a href="#tab2" data-toggle="tab">مشاريع مشتركة معي</a></li>
   </ul>
   <div class="tab-content">
     <div class="tab-pane active" id="tab1">
