[issue #86] [Updated] removes non needed links at bottom of sign up page

--- a/arability/app/views/devise/registrations/new.html.erb
+++ b/arability/app/views/devise/registrations/new.html.erb
@@ -67,7 +67,7 @@
 
             <div><%= f.label t(:country), :class => "control-label" %>
                 <%= f.select(:country, options_for_select(['مصر','لبنان','الاردن','السعودية','ليبيا','الامارات','قطر','الكويت',
-                    'العراق','الجزأئر','المغرب','البحرين','موريتانيا','الصومال','السودان','اخري']), {},
+                    'العراق','الجزأئر','المغرب','البحرين','موريتانيا','الصومال','السودان']), {},
                 {:style => "margin-left: 10px;" }) %>
             </div></br>
 
@@ -83,5 +83,3 @@
     </div>
 
     <% end %>
-
-<%= render "links" %>
