--- a/arability/app/views/layouts/application.html.erb
+++ b/arability/app/views/layouts/application.html.erb
@@ -6,7 +6,8 @@
   <% if I18n.locale == :ar %>
     <%= stylesheet_link_tag "bootstrap.rtl", :media => "all" %>
     <%= stylesheet_link_tag "bootstrap-responsive.rtl", :media => "all" %>
-    <%= javascript_include_tag "bootstrap.rtl" %>
+    <%= stylesheet_link_tag "bootstrap.rtl", :media => "all" %>
+    <%= javascript_include_tag "bootstrap-rtl-overrides" %>
   <% else %>
     <%= stylesheet_link_tag "bootstrap_and_overrides", :media => "all" %>
   <% end %>
