Added developers tab to the nav bar
 The developers tab points to the projects index page currently

--- a/arability/app/views/shared/_navbar.html.erb
+++ b/arability/app/views/shared/_navbar.html.erb
@@ -33,7 +33,7 @@
             </div>
           </li>
       <% else %>
-
+        <li><%= link_to t(:backend), backend_home_path %></li>
         <li><a href="/gamers/sign_out"><i class="icon-home"></i>Sign out</a></li>
         <li><a href="/gamers/edit"><i class="icon-wrench"></i>Account Settings</a></li>
 
