--- a/arability/app/views/devise/registrations/new.html.erb
+++ b/arability/app/views/devise/registrations/new.html.erb
@@ -1,18 +1,51 @@
 <em><h3 class="text-info">Sign up <%= resource_name.to_s.humanize %></h3></em>
-<div class="container well">
 
+<div class="container well">
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
     <% if resource.errors.any? %>
         <div class="alert"><%= devise_error_messages! %></div>
     <% end %>
 
     <% if I18n.locale==:en %>
-    <div class="container">
-        <table style="width:900pt">
-        <col style="width:75%">
-        <col style="width:25%">
-        <tr><td>
+
+        <div class="container">
+            <div><%= f.label :email, :class => "control-label" %>
+            <%= f.email_field :email, :style => "margin-left: 10px;" %></div></br>
+
+            <div><%= f.label :password, :class => "control-label" %>
+            <%= f.password_field :password, :style => "margin-left: 10px;" %></div></br>
+
+            <div><%= f.label :password_confirmation, :class => "control-label" %>
+            <%= f.password_field :password_confirmation, :style => "margin-left: 10px;" %></div></br>
+
+            <div><%= f.label :username, :class => "control-label" %>
+            <%= f.text_field :username, :style => "margin-left: 10px;" %></div></br>
+
+            <div><%= f.label :date_of_birth, :class => "control-label" %>
+            <%=  f.date_select :date_of_birth, {:start_year => Time.now.year, 
+                :end_year => Time.now.year - 95}, :style => "margin-left: 10px;" %></div></br>
+
+            <div><%= f.label :gender, :class => "control-label" %>
+            <%= f.select(:gender,options_for_select(['male','female']),{}, :style => "margin-left: 10px;" ) %></div></br>    
+
+            <div><%= f.label :country, :class => "control-label" %>
+                <span style="margin-left: 10px;">
+                    <%= f.country_select :country, [ "Egypt", "Lebanon", "Jordan" ]%>
+                </span>
+            </div></br>
+
+            <div><%= f.label :education_level, :class => "control-label" %>
+            <%= f.select(:education_level, options_for_select(['','low','medium','high']), {}, { :style => "margin-left: 10px;" }) %></br></div>
+
+            <div><%= f.submit "Sign up", :class => "btn btn-success" %></div>
+
+        </div>
+
+
     <% else I18n.locale==:ar %>
+
+        <div class="container">
+
             <div><%= f.label t(:email), :class => "control-label" %>
             <%= f.email_field :email, :style => "margin-left: 10px;" %></div></br>
 
@@ -29,32 +62,24 @@
             <%=  f.date_select :date_of_birth, {:start_year => Time.now.year, 
                 :end_year => Time.now.year - 95}, :style => "margin-left: 10px;" %></div></br>
 
+            <div><%= f.label t(:gender), :class => "control-label" %>
+            <%= f.select(:gender,options_for_select(['ذكر','انثي']),{}, :style => "margin-left: 10px;" ) %></div></br>  
+
             <div><%= f.label t(:country), :class => "control-label" %>
-                <span style="margin-left: 10px;">
-                    <%= f.country_select :country, [ "Egypt", "Lebanon", "Jordan" ]%>
-                </span>
+                <%= f.select(:country, options_for_select(['مصر','لبنان','الاردن','السعودية','ليبيا','الامارات','قطر','الكويت',
+                    'العراق','الجزأئر','المغرب','البحرين','موريتانيا','الصومال','السودان']), {},
+                {:style => "margin-left: 10px;" }) %>
             </div></br>
 
             <div><%= f.label t(:education_level), :class => "control-label" %>
             <%= f.select(:education_level, options_for_select(['','منخفض','متوسط','عالي']), {}, { :style => "margin-left: 10px;" }) %></br></div>
 
-    <div><%= f.submit "Sign up", :class => "btn btn-success" %></div>
-<% end %>
- </div>
-</td>
- <td style="width:25%; vertical-align:top">
-    <div class="container well" style="width:200px;background-color:white">
-         <div id="remote2"> 
-        </div>  
-        <div id="services" class="box">
-            <p style="font-weight:bold">Or<p>
-            <!-- <a href="/auth/google" class="services2"><%= image_tag "google_64.png", :size => "64x64",  :alt => "Google" %>Sign up using Google</a> -->
-        </div>  
-    </div>
-</td></tr>
-</table>
-</div>
-</div>
-</div>
+            <div><%= f.submit "Sign up", :class => "btn btn-success" %></div>
 
-<%= render "links" %>
+        </div>
+        
+    <% end %>
+
+    </div>
+
+    <% end %>
